fix sttatus bar overflow and add button interactivity

--- a/client/src/styles/_Home/_statusBar.scss
+++ b/client/src/styles/_Home/_statusBar.scss
@@ -55,6 +55,8 @@
   padding: 10px;
   border-radius: 10px;
   flex: 1;
+  min-width: 100px;
+  font-size: 14px;
 }
 .statusBar-nav-item:hover {
   background-color: var(--fb-grey-hover);
